# stunning_robot

./: .gitignore  README.md  docker-compose.yml
bot_service/: .env.template  pyproject.toml
bot_service/bot_service/: app.py
bot_service/bot_service/models/: user_profile_model.py
bot_service/migrations/versions/: e83ed1f4ab6e_.py
llm_service/: .env.template  pyproject.toml
llm_service/dockerfiles/: Dockerfile.llm_service
llm_service/llm_service/: app.py  message_handler.py  redis_client.py
marketplace_api_service/: pyproject.toml
marketplace_api_service/marketplace_api_service/: app.py
marketplace_service/: .env.template  pyproject.toml
marketplace_service/marketplace_service/: app.py
marketplace_service/marketplace_service/models/: mp_models.py
marketplace_service/marketplace_service/routes/: mp_routes.py
marketplace_service/marketplace_service/tests/: conftest.py  test_listings.py  test_payment.py  test_register.py  test_reviews.py
marketplace_service/migrations/versions/: 80a46bac817a_.py
services/bot_service/: app.py  flask_config.py
