[tool.poetry]
name = "llm_service"
version = "0.0.1"
description = "LLM Service"
authors = ['Farai Munashe Wande']

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
tzdata = "^2025.2"
ollama = "^0.4.8"
gunicorn = "^23.0.0"
gevent = "^25.4.1"
redis = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"