[tool.poetry]
name = "marketplace_service"
version = "0.0.1"
description = "Marketplace Service"
authors = ['Farai Munashe Wande']

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.5"
flask-limiter = "^3.12"
flask-caching = "^2.3.1"
flasgger = "^0.9.7.1"
tzdata = "^2025.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"